# practix

./: .gitignore  README.md  build-images.sh  deploy-images-to-k8s.sh  do-all.sh  init-infra.sh  lint.sh  one-time-init.sh
images/admin-panel/: README.md  pyproject.toml  requirements.in  requirements.txt
images/admin-panel/infra/: docker-compose.yml
images/admin-panel/infra/data/: dump.json
images/admin-panel/infra/local/: docker-compose.yml
images/admin-panel/infra/nginx/conf.d/: default.conf
images/admin-panel/scripts/load_db/: load_db.py  schemas.py
images/admin-panel/src/: manage.py
images/admin-panel/src/api/v1/: urls.py
images/admin-panel/src/config/: settings.py  urls.py
images/admin-panel/src/movies/: admin.py  apps.py  consts.py  elastic.py  enums.py  models.py  mongo.py  signals.py
images/admin-panel/src/movies/commands/: startup_elastic.py  startup_mongo.py
images/admin-panel/src/movies/migrations/: 0001_initial.py
images/admin-panel/src/movies/repositories/: filmwork_repository.py
images/async-api/: README.md  go.mod  go.sum  pyproject.toml  requirements.in  requirements.txt  setup.cfg
images/async-api/cmd/api/: main.go
images/async-api/infra/: docker-compose.yml
images/async-api/infra/data/: dump.json
images/async-api/infra/local/: docker-compose.yml
images/async-api/infra/nginx/conf.d/: default.conf
images/async-api/internal/config/: config.go
images/async-api/internal/domain/filmwork/: handler.go  models.go  repository.go  service.go
images/async-api/internal/domain/genre/: handler.go  models.go  repository.go  service.go
images/async-api/internal/domain/person/: handler.go  models.go  repository.go  service.go
images/async-api/internal/http/request/: request.go
images/async-api/pkg/database/: elastic.go  redis.go
images/async-api/src/: main.py
images/async-api/src/api/v1/: urls.py
images/async-api/src/core/: config.py  utils.py
images/async-api/src/db/: elastic.py  redis.py
images/async-api/src/models/: filmwork.py  genre.py  person.py
images/async-api/src/services/: base.py  filmwork.py  genre.py  person.py
images/auth/: Dockerfile  README.md  alembic.ini  go.mod  go.sum  pyproject.toml  requirements.in  requirements.txt  setup.cfg
images/auth/cmd/api/: main.go
images/auth/config/: config.go
images/auth/infra/: docker-compose.yml
images/auth/infra/local/: docker-compose.yml
images/auth/infra/nginx/conf.d/: default.conf
images/auth/internal/domain/auth/: auth.go  middleware.go
images/auth/internal/domain/user/: error.go  handler.go  models.go  repository.go  service.go
images/auth/internal/token/: token.go
images/auth/internal/utils/: user_agent.go
images/auth/local/: docker-compose.yml
images/auth/migrations/: 001_create_tables.down.sql  001_create_tables.up.sql
images/auth/pkg/database/: mongo.go  postgres.go
images/auth/src/: main.py  manage.py  run_celery.py
images/auth/src/api/: schemas.py  urls.py
images/auth/src/api/v1/: auth.py  health.py  urls.py  user.py
images/auth/src/core/: config.py  logger.py
images/auth/src/db/: db.py  mongo.py  postgres.py  redis.py
images/auth/src/dependencies/: auth_deps.py
images/auth/src/migrations/: env.py
images/auth/src/migrations/versions/: 0850d991132e_.py  5259bb87f019_add.py  528ca46097f2_.py  5e163f3a9259_.py  6b6cf716fc4d_.py  7121d2d3fb04_.py  826e33130dca_.py  d17ee07f6fc8_.py
images/auth/src/models/: session.py  user.py
images/auth/src/schemas/: schemas.py
images/auth/src/utils/: code.py  hash_password.py  jwt_manager.py  mongo_users.py  notification.py  sessions.py  tasks.py
images/etl/postgres-to-elastic/: Dockerfile  pyproject.toml  requirements.in  requirements.txt  setup.cfg
images/etl/postgres-to-elastic/src/: main.py
images/etl/postgres-to-elastic/src/db/: elastic.py  postgres.py  redis.py
images/etl/postgres-to-elastic/src/models/: filmwork.py  genre.py
images/etl/postgres-to-elastic/src/services/: errors.py  extract.py  load.py  state.py  transform.py
images/etl/postgres-to-mongo/: Dockerfile  pyproject.toml  requirements.in  requirements.txt  setup.cfg
images/etl/postgres-to-mongo/src/: main.py
images/etl/postgres-to-mongo/src/core/: logger.py
images/etl/postgres-to-mongo/src/db/: mongo.py  postgres.py
images/etl/postgres-to-mongo/src/services/: extract.py  load.py
images/notifications/admin-panel/: pyproject.toml
images/notifications/admin-panel/src/: manage.py
images/notifications/admin-panel/src/config/: settings.py  urls.py
images/notifications/admin-panel/src/notifications/: admin.py  models.py  validators.py
images/notifications/receiver/: Dockerfile  pyproject.toml
images/notifications/receiver/src/: main.py
images/notifications/receiver/src/api/: handlers.py  urls.py
images/notifications/receiver/src/core/: config.py
images/notifications/receiver/src/db/: postgres.py  rabbitmq.py
images/notifications/receiver/src/models/: models.py
images/notifications/worker/: Dockerfile  pyproject.toml
images/notifications/worker/src/: main.py
images/notifications/worker/src/db/: postgres.py  rabbitmq.py
images/notifications/worker/src/models/: models.py
images/ugc/: Dockerfile  README.md  go.mod  go.sum  pyproject.toml  requirements.in  requirements.txt
images/ugc/cmd/api/: main.go
images/ugc/infra/: docker-compose.yml
images/ugc/infra/local/: docker-compose.yml
images/ugc/internal/config/: config.go
images/ugc/internal/handlers/: bookmarks.go  filmworks.go  paginator.go  reviews.go
images/ugc/internal/middlewares/: auth.go  paginator.go
images/ugc/internal/models/: models.go
images/ugc/internal/services/: auth.go  base.go  bookmarks.go  filmworks.go  reviews.go
images/ugc/internal/validator/: validator.go
images/ugc/pkg/database/: mongo.go
images/ugc/src/: main.py
images/ugc/src/api/: dependencies.py  paginator.py  urls.py
images/ugc/src/core/: config.py  emums.py  enums.py
images/ugc/src/db/: mongo.py
images/ugc/src/models/: models.py
images/ugc/src/services/: auth.py  base.py  bookmarks.py  filmworks.py  reviews.py  utils.py
(+126 files in other folders)
