[project]
name = "admin-panel"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.1.7",
    "django-debug-toolbar==5.1.0",
    "django-filter==25.1",
    "djangorestframework==3.16.0",
    "drf-spectacular==0.28.0",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
]
