[project]
name = "async-api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch[async]==8.17.2",
    "fastapi==0.115.12",
    "orjson==3.10.16",
    "pydantic==2.11.1",
    "pydantic-settings==2.8.1",
    "redis==5.2.1",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "wemake-python-styleguide>=1.2.0",
]

[tool.flake8]
max-line-length = 100
exclude = [".venv"]

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
skip_glob = [".venv"]
default_section = "THIRDPARTY"
src_paths = ["src"]
known_fastapi = ["fastapi"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FASTAPI",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

[tool.black]
line-length = 100
exclude = '\.venv/'
skip-string-normalization = true

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
warn_unused_ignores = true
exclude = "(^|/)(.venv|migrations)/"
namespace_packages = true
ignore_missing_imports = true
