[project]
name = "async-api"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch[async]==8.17.2",
    "fastapi==0.115.12",
    "orjson==3.10.16",
    "pydantic==2.11.1",
    "pydantic-settings==2.8.1",
    "redis==5.2.1",
    "uvicorn[standard]==0.34.0",
]
