[project]
name = "auth"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.1.8",
    "flasgger==0.9.7.1",
    "flask==3.1.0",
    "flask-jwt-extended==4.7.1",
    "flask-marshmallow==1.3.0",
    "flask-migrate==4.1.0",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.1",
    "pydantic-settings==2.8.1",
    "redis==5.2.1",
    "requests==2.32.3",
    "user-agents==2.2.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "wemake-python-styleguide>=1.2.0",
]

[tool.flake8]
max-line-length = 100
exclude = [".venv", "*/migrations/*.py"]

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
skip_glob = [".venv"]
default_section = "THIRDPARTY"
src_paths = ["src"]
known_flask = ["flask"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FLASK",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

[tool.black]
line-length = 100
exclude = '\.venv/'
skip-string-normalization = true

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
warn_unused_ignores = true
exclude = "(^|/)(.venv|migrations)/"
namespace_packages = true
ignore_missing_imports = true
