[project]
name = "ugc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "motor==3.7.0",
    "orjson==3.10.16",
    "pydantic==2.11.1",
    "pydantic-settings==2.8.1",
    "pyjwt==2.10.1",
    "pymongo==4.11.3",
    "uvicorn[standard]==0.34.0",
]
