[project]
name = "ugc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "motor==3.7.0",
    "orjson==3.10.16",
    "pydantic==2.11.1",
    "pydantic-settings==2.8.1",
    "pyjwt==2.10.1",
    "pymongo==4.11.3",
    "uvicorn[standard]==0.34.0",
]

[tool.flake8]
max-line-length = 100
exclude = [".venv"]

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
skip_glob = [".venv"]
default_section = "THIRDPARTY"
known_fastapi = ["fastapi"]
src_paths = ["src"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FASTAPI",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

[tool.black]
line-length = 100
exclude = '\.venv/'
skip-string-normalization = true

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
warn_unused_ignores = true
exclude = "(^|/)(.venv|migrations)/"
namespace_packages = true
ignore_missing_imports = true
