[tool.poetry]
name = "admin-panel"
description = ""
version = "0.1.0"
authors = ["MironBerch"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
psycopg2-binary = "^2.9.10"
django-celery-beat = "^2.7.0"
celery = "^5.4.0"
redis = "^5.2.1"
djangorestframework = "^3.15.2"
jinja2 = "^3.1.5"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
