[tool.poetry]
name = "receiver"
version = "0.1.0"
description = ""
authors = ["MironBerch"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic = "^2.10.5"
orjson = "^3.10.14"
pydantic-settings = "^2.7.1"
aio-pika = "^9.5.4"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
