[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["MironBerch"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.5.4"
pydantic = "^2.10.5"
jinja2 = "^3.1.5"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
