[project]
name = "notifications-worker"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika==9.5.5",
    "jinja2==3.1.6",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.1",
    "sqlalchemy==2.0.40",
]

[tool.flake8]
max-line-length = 100
exclude = [".venv"]

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
skip_glob = [".venv"]
default_section = "THIRDPARTY"
src_paths = ["src"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
